# django-dynamic-forms

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  make.bat
docs/source/: changes.rst  conf.py  index.rst  installation.rst  problems.rst  usage.rst
docs/source/ref/: actions.rst  admin.rst  fields.rst  formfields.rst  forms.rst  index.rst  middlewares.rst  models.rst  settings.rst  views.rst
dynamic_forms/: __init__.py  actions.py  admin.py  apps.py  conf.py  fields.py  formfields.py  forms.py  middlewares.py  models.py  urls.py  utils.py  views.py
dynamic_forms/contrib/simple_captcha/: models.py
dynamic_forms/dj_migrations/: 0001_initial.py  0002_auto_20140124_1844.py
dynamic_forms/migrations/: 0001_initial.py  0002_auto_20140124_1844.py  0002_auto__add_field_formmodel_allow_display__chg_field_formfieldmodel__opt.py  0003_auto_20140916_1433.py  0004_formmodel_recipient_email.py  0005_auto_increase_form_label_max_length_255.py
dynamic_forms/south_migrations/: 0001_initial.py  0003_auto__add_field_formmodel_recipient_email.py  0004_auto__chg_field_formfieldmodel_label.py
dynamic_forms/templates/dynamic_forms/: data_set.html  data_set_404.html  email.txt  form.html  (+1 more)
example/: example.db  manage.py
example/example/: settings.py  urls.py  wsgi.py
tests/: requirements.txt  runtests.sh  settings.py  test_actions.py  test_admin.py  test_formfields.py  test_forms.py  test_models.py  test_simple_captcha.py  test_views.py  urls.py  utils.py
(+8 files in other folders)
