[coverage:run]
branch = True
source = dynamic_forms/

[coverage:report]
fail_under = 95
show_missing = True

[flake8]
exclude = build,dist,docs,.git,.tox,./dynamic_forms/migrations/*.py
ignore = E123,E128,E265,E266,E402,E501,E731,W503,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = dynamic_forms
include_trailing_comma = true
known_first_party = dynamic_forms
known_third_party = django
multi_line_output = 5

[metadata]
license-file = LICENSE

[wheel]
universal = 1
